--- a/index.html
+++ b/index.html
@@ -386,6 +386,22 @@
             </li>
         </ul>  
     </div>
+    <form class="footer-form">
+        <b class="footer-form-hidden">Подпишитесь на рассылку</b>
+        <div class="footer-form-wrapper">
+        <label class="footer-form-label">
+        <input class="footer-form-input" type="email" name="email" placeholder="E-mail">
+        </label>
+        <div class="footer-button">
+        <button class="footer-button-submit" type="submit">Подписаться 
+            <svg class="footer-button-icon" width="24" height="24">
+            <use href="./img/sprite.img.svg#icon-send"></use>
+        </svg> 
+        </button>
+        </div>  
+        </div>
+    </form>
+
     </div>
 </footer>
 
@@ -431,8 +447,8 @@
             </label>
 
             <div class="modal-form-checkbox-wrapper">
-                <input class="modal-form-checkbox" type="checkbox" name="accept_policy" id="policy-checkbox" required>
-                <label class="modal-form-checkbox-label" for="policy-checkbox">Соглашаюсь с рассылкой и принимаю &nbsp; <a href="">Условия договора</a></label>
+                <input class="modal-form-checkbox visually-hidden" type="checkbox" name="accept_policy" id="policy-checkbox" required>
+                <label class="modal-form-checkbox-label" for="policy-checkbox">Соглашаюсь с рассылкой и принимаю&nbsp; <a class="modal-form-checkbox-label-policy" href="">Условия договора</a></label>
             </div>
 
             <button class="modal-button-submit" type="submit">Отправить</button>
