--- a/portfolio.html
+++ b/portfolio.html
@@ -219,13 +219,28 @@
             </li>
             <li class="join-social-list-item">
                 <a class="join-social-list-link" href=""> 
-                <svg class="join-social-list-icon" width="20" height="20" >
+                <svg class="join-social-list-icon" width="20" height="20">
                     <use href="./img/sprite.img.svg#icon-linkedin"></use>
                 </svg>    
                 </a>
             </li>
         </ul>  
     </div>
+    <form class="footer-form">
+        <b class="footer-form-hidden">Подпишитесь на рассылку</b>
+        <div class="footer-form-wrapper">
+        <label class="footer-form-label">
+            <input class="footer-form-input" type="email" name="email" placeholder="E-mail">
+        </label>
+        <div class="footer-button">
+        <button class="footer-button-submit" type="submit">Подписаться 
+            <svg class="footer-button-icon" width="24" height="24">
+            <use href="./img/sprite.img.svg#icon-send"></use>
+        </svg> 
+        </button>
+        </div>  
+        </div>
+    </form>
     </div>
 </footer>
 </body>
